--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<font size="6"><p>Hello! My name is Matt</p></font>
+<center><font size="6"><p>Hello! My name is Matt.</p></font></center>
 </html>
