--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-<center><font size="6"><p>Hello! My name is Matt.</p></font></center>
+<head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
 </html>
