--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-</head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
+  </head>
 </html>
