--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
+    <h1>Welcome to MatthewLydigsen.com</h1>
   </head>
 </html>
