--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-    <h1>Welcome</h1>
+    <div> </div>
   </head>
 </html>
