--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-    <div> </div>
+      <div>
+        <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
+      </div>
   </head>
 </html>
