--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div>
+      <div class = "tabContent">
         <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
+        <ul id="tabs">
+          <li><a href="#about">About</a></li>
+          <li><a href="#advantages">Advantages</a></li>
+          <li><a href="#usage">Using</a></li>
+        </ul>
       </div>
   </head>
 </html>
