--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div class = "tabContent">
+      <div class = "logo">
         <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
+      </div>  
+      <div class = "tabContent">
         <ul id="tabs">
           <li><a href="#about">About</a></li>
           <li><a href="#advantages">Advantages</a></li>
