--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div class = "header">
         <div class = "logo">
           <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
@@ -10,6 +9,8 @@
             <li><a href="Projects.html">Projects</a></li>
           </ul>
         </div>
+      <div class = "header">
+        <p style="color:FFFFFF"><p>
       </div>
   </head>
 </html>
