--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
           </ul>
         </div>
       <div class = "header">
-        <p style="color:FFFFFF"><p>
+        <p style="color:FFFFFF">Hello<p>
       </div>
+      <p style="color:FFFFFF">Hello<p>
   </head>
 </html>
