--- a/Projects.html
+++ b/Projects.html
@@ -6,9 +6,7 @@
         </div>  
         <div class = "tabContent">
           <ul id="tabs">
-            <li><a href="#about">About</a></li>
-            <li><a href="#advantages">Advantages</a></li>
-            <li><a href="#usage">Using</a></li>
+            <li><a href="Projects.html">Projects</a></li>
           </ul>
         </div>
       </div>
