--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div class = "header">  
+        <p style="color:FFFFFF">Hello World<p>
         <div class = "logo">
           <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
