--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div class = "header">  
         <div class = "logo">
-          <!--<img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">-->
+            <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;display:inline;">
             <ul id="tabs">
               <li><a href="Projects.html">Projects</a></li>
             </ul>
