--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div class = "header">  
-        <div class = "logo">
+        <!--<div class = "logo">-->
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
-          <div class = "tabContent">
+          <!--<div class = "tabContent">-->
             <ul id="tabs">
               <li><a href="Projects.html">Projects</a></li>
-            </ul>
-          </div>
-        </div>  
+            </ul>  
       </div>
   </head>
 </html>
