--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
   <head>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div class = "header">  
-        <!--<div class = "logo">-->
-            <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;float:left;">
-          <!--<div class = "tabContent">-->
+        <div class = "logo">
+            <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
+        </div>  
+        <div class = "tabContent">
             <ul id="tabs">
               <li><a href="Projects.html">Projects</a></li>
-            </ul>  
+            </ul>
+        </div>
       </div>
   </head>
 </html>
