--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
         <div class = "tabContent">
-            <ul id="tabs">
+            <ul id="tabs" style="display:inline">
               <li><a href="Projects.html">Projects</a></li>
             </ul>
         </div>
