--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style="margin:0; padding:0;">
+<html>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div class = "header">  
         <div class = "logo">
