--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div class = "header">  
+      <!--<div class = "header">  
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
@@ -9,5 +9,6 @@
               <li><a href="Projects.html">Projects</a></li>
             </ul>
         </div>
-      </div>
+      </div>-->
+      <div style="margin:0; padding:0;"><p></p></div>
 </html>
