--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
             </ul>
         </div>
       </div>-->
-      <div style="margin:0; padding:0; background-color: green;"><p>hello</p></div>
+<p style="margin:0; padding:0;">hello</p>
 </html>
