--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-        <img src="images/header.jpg" alt="Logo" style="width:100%;height:140px;">
+      <div>
+        <img src="images/header.jpg" alt="Logo" style="width:100%;height:220px;">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
@@ -9,4 +10,5 @@
               <li><a href="Projects.html">Projects</a></li>
             </ul>
         </div>
+      </div>    
 </html>
