--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
+    <img src="images/header.jpg" alt="Logo" style="width:100%;height:250px;margin-left:-10px; margin-top:-10px; margin-right -10px">
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div style="float:left;">
-        <img src="images/header.jpg" alt="Logo" style="float:left;width:100%;height:250px;margin-left:-10px; margin-top:-10px; margin-right -10px">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
