--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-    <img src="images/header.jpg" alt="Logo" style="width:100%;height:250px;margin-left:-10px; margin-top:-10px; margin-right -10px">
+    <img src="images/header.jpg" alt="Logo" style="width:100%;height:250px;margin-left:-10px; 
+    margin-top:-10px; -o-background-size: cover; background-size: cover;">
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div style="float:left;">
         <div class = "logo">
