--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-    <img src="images/header.jpg" alt="Logo" style="width:101%;height:300px;margin-left:-10px; 
-    margin-top:-10px; -o-background-size: cover; background-size: cover;">
+    <img src="images/header.jpg" alt="Logo" style="width:100%;height:300px;margin-left:-10px; 
+    margin-top:-10px;">
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div style="float:left;">
         <div class = "logo">
