--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div style="float:left;">
+      <div style="margin-right:-10px;">
             <img src="images/header.jpg" alt="Logo" style="width:100%;height:300px;margin-left:-10px; 
             margin-top:-10px;">
         <div class = "logo">
