--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div style="margin-right:-20px;">
-            <img src="images/header.jpg" alt="Logo" style="width:100%;height:300px;margin-left:-10px; 
+      <div style="position:fixed;">
+            <img src="images/header.jpg" alt="Logo" style="position:fixed; width:100%;height:300px;margin-left:-10px; 
             margin-top:-10px;">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
