--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div style="position:fixed;">
+      <div style="">
             <img src="images/header.jpg" alt="Logo" style="position:fixed; width:100%;height:300px;">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
