--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div style="margin:-10px;">
-            <img src="images/header.jpg" alt="Logo" style="position:fixed; width:100%;height:300px;">
+            <img src="images/header.jpg" alt="Logo" style="position:fixed; width:100%;height:300px;margin:-10px;">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
         </div>  
