--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <div>
         <img src="images/header.jpg" alt="Logo" style="position:fixed; width:100%;height:326px;margin:-8px;">
         <div class = "logo">
-            <img src="images/logo.jpg" alt="Logo" style="width:256px;height:256px;">
+            <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px; padding:5px">
         </div>  
         <div class = "tabContent">
             <ul id="tabs" style="display:inline">
