--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <ul id="tabs" style="display:inline">
               <li><a href="Projects.html">Projects</a></li>
             </ul>
-             <img src="logg.png" style="width:114px; height:38; padding-top: 100px" 
+             <img src="images/projects_tab.jpg" style="width:114px; height:38; padding-top: 100px" 
              onclick=<a href="Projects.html">Projects</a> />
         </div>
       </div>    
