--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px; padding:5px">
         </div>  
         <div class = "tabContent">
-            <ul id="tabs" style="display:inline">
-              <li><a href="Projects.html">Projects</a></li>
-            </ul>
-             <img src="images/projects_tab.jpg" style="width:114px; height:38; padding-top: 100px" 
-             onclick=<a href="Projects.html">Projects</a> />
+             <img src="images/projects_tab.jpg" style="width:114px; height:38; padding-top: 200px" 
+             onclick=<a href="Projects.html"></a> />
         </div>
       </div>    
 </html>
