--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px; padding:5px">
         </div>  
         <div class = "tabContent">
-             <img src="images/projects_tab.jpg" style="width:114px; height:38; padding-top: 250px" 
-             onclick=<a href="Projects.html"></a> />
+            <form action="Projects.html">
+              <input type="image" src="images/projects_tab.jpg" style="width:114px; height:38; padding-top: 290px"
+              alt="Submit">
+            </form>
+             <img src="images/projects_tab.jpg" style="width:114px; height:38; padding-top: 290px"  />
         </div>
       </div>    
 </html>
