--- a/Projects.html
+++ b/Projects.html
@@ -10,4 +10,7 @@
           </ul>
         </div>
       </div>
+      <div class = "body">
+         <p>Hello My name is Matthew Lydigsen and this website is one i designed and made from scratch.</p>
+      </div>
 </html>
