--- a/index.html
+++ b/index.html
@@ -13,4 +13,7 @@
             </form>
         </div>
       </div>    
+      <div class = "body">
+          <p>Hello my name is Matthew Lydigsen and this is my website.</p>
+      </div>
 </html>
