--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         </div>
       </div>    
       <div class = "body">
-          <p>Hello my name is Matthew Lydigsen and this is my website.</p>
+          <p style="text-align:center;">Hello my name is Matthew Lydigsen and this is my website.</p>
       </div>
 </html>
