--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div>
-        <img src="images/header.jpg" alt="Logo" style="position:fixed; width:100%;height:326px;margin:0px;">
+        <img src="images/natureheader.gif" alt="Logo" style="position:fixed; width:100%;height:326px;margin:0px;">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px; padding:5px">
         </div>  
