--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div>
-        <img src="images/natureheader.gif" alt="Logo" style="position:fixed; width:100%;height:326px;margin:0px;">
+        <img src="images/natureheader.gif" alt="Logo" style="width:100%;height:326px;margin:0px;">
         <div class = "logo">
             <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px; padding:5px">
         </div>  
         <div class = "tabContent">
             <form action="Projects.html">
-              <input type="image" src="images/projects_tab.jpg" style="width:165px; height:60; padding-top: 250px"
+              <input type="image" src="images/projects_tab.jpg" style="width:165px; height:60px; padding-top: 250px"
               alt="Submit">
             </form>
         </div>
