--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
       </div>    
       <div class = "body">
-          <p class = "body">Hello my name is Matthew Lydigsen and this is my website.</p>
+          <h1>Live Long and Prosper</h1>
+          <p class = "body">No i'm not a vulcan, my name is matt and i study computer science.</p>
       </div>
 </html>
