--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div>
-        <img src="images/natureheader.gif" alt="Logo" style="position:absolute;width:100%;height:326px;margin:0px;">
+        <img src="images/natureheader.gif" alt="Logo" style="position:absolute;width:100%;height:347px;margin:0px;margin-top:-22px;">
         <div class = "logo">
-            <img src="images/logo.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">
+            <!--<img src="images/logo.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">-->
         </div>  
         <div class = "tabContent">
             <form action="Projects.html">
