--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       </div>    
       <div class = "body">
           <h1>Live Long and Prosper</h1>
-          <p class = "body">No i'm not a vulcan, my name is matt and i study computer science.</p>
+          <p class = "body">No i'm not a vulcan, my name is Matt and i study computer science. I made this website to help me gain
+          knowledge abut front-end development and to give information about myself to anyone who wants to know a little more about
+          me. </p>
       </div>
 </html>
