--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
       </div>    
       <div class = "body">
           <h1>Live Long and Prosper</h1>
+          <hr><hr>
           <p class = "body">No i'm not a vulcan, my name is Matt and i study computer science. I made this website to help me gain
-          knowledge abut front-end development and to give information about myself to anyone who wants to know a little more about
-          me. </p>
+          knowledge about front-end development and to give information about myself to anyone who wants to know a little more about
+          me. This homepage is made with standard HTML and CSS code but as the site grows i will edit pages to be displayed using
+          different techniques such as angular. </p>
+          
+          <h1>Background</h1>
+          <hr><hr>
+          <p class = "body">As you may know by now my name is Matt and i'm currently a student at the University of 
+          Massachusetts Amherst. I am studying computer science and computational mathematics. Outside of class I am
+          a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
+          the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
+          Administrative staff, I help manage the bands website which you can check out here http://www.umass.edu/band/</p>
       </div>
 </html>
