--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
           Massachusetts Amherst. I am studying computer science and computational mathematics. Outside of class I am
           a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
           the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
-          Administrative staff, I help manage the bands website which you can check out here http://www.umass.edu/band/</p>
+          Administrative staff, I help manage the bands website which you can check out <a href="umass.edu/band">here</a>.</p>
+          
+          <h1>Interest</h1>
+          <hr>
+          <p class = "body"> If you haven't figure out by now i'm kind of a nerd. I love watching TV some of my favorite
+          shows are Star Trek, Walking Dead, Game of Thrones, Doctor Who, just to name a few. I have seen almost every
+          science fiction movie made in the last 30 years. </p>
+          
+          <h1>FIRST</h1>
+          <hr>
+          <p class = "body"><iframe title="YouTube video player" class="youtube-player" type="text/html" 
+            width="640" height="390" src="http://www.youtube.com/embed/W-Q7RMpINVo"
+            frameborder="0" allowFullScreen></iframe> </p>
       </div>
 </html>
