--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           Massachusetts Amherst. I am studying computer science and computational mathematics. Outside of class I am
           a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
           the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
-          Administrative staff, I help manage the bands website which you can check out <a href="umass.edu/band">here</a>.</p>
+          Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
+          here</a>.</p>
           
           <h1>Interest</h1>
           <hr>
@@ -37,8 +38,8 @@
           
           <h1>FIRST</h1>
           <hr>
-          <p class = "body"><iframe title="YouTube video player" class="youtube-player" type="text/html" 
+          <iframe title="YouTube video player" class="youtube-player" type="text/html" 
             width="640" height="390" src="https://www.youtube.com/watch?v=1ZsiCwKIp_k"
-            frameborder="0" allowFullScreen></iframe> </p>
+            frameborder="0" allowFullScreen></iframe> 
       </div>
 </html>
