--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
           
           <h1>FIRST</h1>
           <hr>
-          <iframe title="YouTube video player" class="youtube-player" type="text/html" 
-            width="640" height="390" src="https://www.youtube.com/watch?v=1ZsiCwKIp_k"
-            frameborder="0" allowFullScreen></iframe> 
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+          frameborder="0" allowfullscreen></iframe>
       </div>
 </html>
