--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </div>  
         <div class = "tabContent">
             <form action="Projects.html">
-              <input type="image" src="images/projects_tab.jpg" style="width:165px; height:60px; padding-top: 250px"
+              <input type="image" src="images/projectstabnothighlighted.jpg" style="width:165px; height:40px; padding-top: 0px"
               alt="Submit">
             </form>
         </div>
