--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </div>  
         <div class = "tabContent">
             <form action="Projects.html">
-              <input type="image" src="images/projectstablighted.jpg" style="width:135px; height:41px; padding-top: 0px
+              <input type="image" src="images/projectstablighted.jpg" style="width:135px; height:41px; padding-top: 0px;
               margin-left:15%; padding-left:8px;"
               alt="Submit">
             </form>
