--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
             <!--<img src="images/logo.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">-->
         </div>  
         <div class = "tabContent">
-            <form action="Projects.html">
-              <input type="image" src="images/projectstablighted.jpg" style="width:135px; height:41px; padding-top: 0px;
-              margin-left:15%; padding-left:8px;"
+            <form action="Projects.html" id = "tabs">
+              <script>
+              var isHovering = $('#someDiv').is(":hovering");
+                if(isHovering){
+                    document.getElementById("tabs").innerHTML = "<input type="image" src="images/projectstablighted.jpg" 
+                    style="width:135px; height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;">";
+                }
+                else{
+                    document.getElementById("tabs").innerHTML = "<input type="image" src="images/projectsTabNotLighted.jpg" 
+                    style="width:135px; height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;">";
+                }
+              </script>
               alt="Submit">
             </form>
         </div>
