--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
               <script>
               var isHovering = $('#someDiv').is(":hovering");
                 if(isHovering){
-                    document.getElementById("tabs").innerHTML = "<input type="image" src="images/projectstablighted.jpg" 
-                    style="width:135px; height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;" alt="Submit">";
+                    document.getElementById("tabs").innerHTML = "<input type="image" src="images/projectstablighted.jpg" style="width:135px; height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;" alt="Submit">";
                 }
                 else{
-                    document.getElementById("tabs").innerHTML = "<input type="image" src="images/projectsTabNotLighted.jpg" 
-                    style="width:135px; height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;" alt="Submit">";
+                    document.getElementById("tabs").innerHTML = "<input type="image" src="images/projectsTabNotLighted.jpg" style="width:135px; height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;" alt="Submit">";
                 }
               </script>
             </form>
