--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </div>  
         <div class = "tabContent">
             <script>
-              var isHovering = $("tabContent").is(":hovering");
+              var isHovering = ("tabContent").is(":hovering");
                 if(isHovering){
                     document.getElementById("tab").innerHTML = "images/projectsTabNotLighted.jpg";
                 }
