--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <div>
         <img src="images/natureheader.gif" alt="Logo" style="position:absolute;width:100%;height:347px;margin:0px;margin-top:-22px;">
         <div class = "logo">
-            <!--<img src="images/logo.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">-->
+            <img src="images/profilepicture.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">
         </div>  
         <div class = "tabContent">
             <script>
