--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
            <p class = "body">This is a video of my FRC team back in 2013 at the Boston State Regional Finals. Our team
            one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
            heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
-           pound robots to accomplish challenges FIRST presents every year. </p>
+           pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
+           shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
+           challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
+           systems, sensors, electronics, and overall love for engineering. <a href="http://www.usfirst.org/"></a></p>
       </div>
 </html>
