--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
            pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
            shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
            challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
-           systems, sensors, electronics, and overall love for engineering. <a href="http://www.usfirst.org/"></a></p>
+           systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
+           visit their website <a href="http://www.usfirst.org/">here</a></p>
       </div>
 </html>
