--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <img src="images/profilepicture.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">
         </div>  
         <div class = "tabContent">
-            <script>
+            <!--<script>
               var isHovering = ("tabContent").is(":hovering");
                 if(isHovering){
                     document.getElementById("tab").innerHTML = "images/projectsTabNotLighted.jpg";
@@ -19,7 +19,7 @@
             <form action="Projects.html" id = "tabs">
                 <input type="image" src=<var id = "tab"> style="width:135px; 
                 height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;" alt="Submit">";
-            </form>
+            </form>-->
         </div>
       </div>    
       <div class = "body">
