--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <img src="images/natureheader.gif" alt="Logo" style="position:absolute;width:100%;height:347px;margin:0px;margin-top:-22px;">
         <div class = "logo">
             <img src="images/profilepicture.jpg" alt="Logo" style="width:188px;height:188px; padding:1px">
+            <h1> Matthew Lydigsen </h1>
         </div>  
         <div class = "tabContent">
             <!--<script>
