--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-
+    <title>Something Clever</title>
     <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div>
         <img src="images/natureheader.gif" alt="Logo" style="position:absolute;width:100%;height:347px;margin:0px;margin-top:-22px;">
