--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <title>Bootstrap 101 Template</title>
 
           <!-- Bootstrap -->
-          <link href="css/bootstrap.theme.css" rel="stylesheet">
+          <link href="css/bootstrap-theme.css" rel="stylesheet">
 
           <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
           <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -82,8 +82,10 @@
           <![endif]-->
         </head>
         <body>
-          <h1>Hello, world!</h1>
-
+            <div>
+                <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
+                <h2 class = "logo"> Matthew Lydigsen </h2>
+            </div>  
           <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
           <!-- Include all compiled plugins (below), or include individual files as needed -->
