--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <![endif]-->
         </head>
         <body>
-            <div>
+            <div class="jumbotron">
                 <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
                 <h2 class = "logo"> Matthew Lydigsen </h2>
             </div>  
