--- a/index.html
+++ b/index.html
@@ -86,9 +86,30 @@
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
           <!-- Include all compiled plugins (below), or include individual files as needed -->
           <script src="js/bootstrap.min.js"></script>
-            <div class="jumbotron">
-                <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
-                <h2 class = "logo"> Matthew Lydigsen </h2>
-            </div>  
+          <div class="container">
+          <div class="jumbotron">
+            <h1>My First Bootstrap Page</h1>
+            <p>Resize this responsive page to see the effect!</p> 
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <h3>Column 1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            </div>
+            <div class="col-sm-4">
+              <h3>Column 2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            </div>
+            <div class="col-sm-4">
+              <h3>Column 3</h3>        
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            </div>
+          </div>
+        </div>
+               <!-- <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
+                <h2 class = "logo"> Matthew Lydigsen </h2>-->
         </body>
       </html>
