--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <title>Something Clever</title>
     <!--<link rel="stylesheet" type="text/css" href="HomePageBackground.css">
       <div>
@@ -73,43 +73,37 @@
 
           <!-- Bootstrap -->
           <link href="css/bootstrap-theme.css" rel="stylesheet">
-
-          <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-          <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-          <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-          <![endif]-->
-        </head>
-        <body>
           <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
           <!-- Include all compiled plugins (below), or include individual files as needed -->
           <script src="js/bootstrap.min.js"></script>
+
+        </head>
+        <body>
           <div class="container">
-          <div class="jumbotron">
-            <h1>My First Bootstrap Page</h1>
-            <p>Resize this responsive page to see the effect!</p> 
+              <div class="jumbotron">
+                <h1>My First Bootstrap Page</h1>
+                <p>Resize this responsive page to see the effect!</p> 
+              </div>
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3>Column 1</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                </div>
+                <div class="col-sm-4">
+                  <h3>Column 2</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                </div>
+                <div class="col-sm-4">
+                  <h3>Column 3</h3>        
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                </div>
+              </div>
           </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <h3>Column 1</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-            </div>
-            <div class="col-sm-4">
-              <h3>Column 2</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-            </div>
-            <div class="col-sm-4">
-              <h3>Column 3</h3>        
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-            </div>
-          </div>
-        </div>
                <!-- <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
                 <h2 class = "logo"> Matthew Lydigsen </h2>-->
         </body>
-      </html>
+</html>
