--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <title>Bootstrap 101 Template</title>
 
           <!-- Bootstrap -->
-          <link href="css/bootstrap-theme.css" rel="stylesheet">
+          <link href="css/bootstrap.min.css" rel="stylesheet">
           <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
           <!-- Include all compiled plugins (below), or include individual files as needed -->
