--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
         </head>
         <body>
           <div class="container">
+                <div class="jumbotron" style="background-color:#6699ff;">
                   <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
                   <h2 class = "logo"> Matthew Lydigsen </h2>
+                </div>  
               <div class="row">
                 <div class="col-sm-4">
                   <h3>Column 1</h3>
