--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <body>
           <div class="container">
                 <div class="jumbotron" style="background-color:#6699ff;">
-                  <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
+                  <img src="images/profilepicture.jpg" class="img-circle"  style="width:225px;height:225px; padding:1px">
                   <h2 class = "logo"> Matthew Lydigsen </h2>
                 </div>  
               <div class="row">
