--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </head>
         <body>
           <div class="container">
-                <div class="jumbotron" style="background-color:#6699ff;">
-                  <img src="images/profilepicture.jpg" class="img-circle"  style="width:225px;height:225px; padding:1px">
+                <div class="jumbotron" style="background-color:#99bbff;">
+                  <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;" align="right">
                   <h2 class = "logo"> Matthew Lydigsen </h2>
                 </div>  
               <div class="row">
