--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         <body>
           <div class="container">
                 <div class="jumbotron" style="background-color:#99bbff;">
-                  <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;" align="right">
+                    <div class="pull-right">
+                        <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;">
+                    </div>
                   <h2 class = "logo"> Matthew Lydigsen </h2>
                 </div>  
               <div class="row">
