--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="pull-right">
                         <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;">
                     </div>
-                  <h2 class = "logo"> Matthew Lydigsen </h2>
+                  <h6> Matthew Lydigsen </h6>
                 </div>  
               <div class="row">
                 <div class="col-sm-4">
