--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <body>
           <div class="container">
                 <div class="jumbotron" style="background-color:#99bbff;">
-                    <div class="pull-right">
+                    <div class="span6 pull-right">
                         <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;">
                     </div>
-                  <h1> Matthew Lydigsen </h1>
+                  <h1> Hi I'm Matt </h1>
                 </div>  
               <div class="row">
                 <div class="col-sm-4">
