--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <body>
           <div class="container">
                 <div class="jumbotron" style="background-color:#99bbff;">
-                    <div class="span6 pull-right">
+                    <div class="span6 pull-right" style="overflow:hidden;">
                         <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;">
                     </div>
                   <h1> Hi I'm Matt </h1>
