--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </head>
         <body>
           <div class="container">
-                <div class="jumbotron" style="background-color:#99bbff;">
-                    <div class="span6 pull-right" style="overflow:hidden;">
+                <div class="jumbotron, parent" style="background-color:#99bbff;">
+                    <div class="pull-right, floated_child">
                         <img src="images/profilepicture.jpg" class="img-rounded" style="width:225px;height:225px; padding:1px;">
                     </div>
                   <h1> Hi I'm Matt </h1>
