--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="container">
                 <div class="jumbotron" style="background-color:#99bbff;">
                     <div style="float: right;">
-                        <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;">
+                        <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:154px; position:absolute;">
                     </div>
                   <h1> Hi I'm Matt </h1>
                 </div>  
