--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
-                <div style="float: right;">
+                <!--<div style="float: right;">-->
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
-                </div>
-              <h1 style="left:30px;"> Hi I'm Matt </h1>
+    
+              <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
             </div>  
           <div class="container">        
               <div class="row">
