--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </div>  
           <div class="container">        
               <div class="row">
-                <div class="col-sm-4">
-                  <h3>Column 1</h3>
+                <div class="col-sm-12">
+                  <h3>About me</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
                   <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
                 </div>
