--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
               <div class="row">
                 <div class="col-sm-12">
                   <h3>About me</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                  <p>I am a computer science and mathematics double major at the Universtiy of Massachusetts Amherst.</p>
                 </div>
               </div>
           </div>
