--- a/index.html
+++ b/index.html
@@ -86,13 +86,11 @@
     
               <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
             </div>  
-          <div class="container">        
-              <div class="row">
-                <div class="col-sm-12">
-                  <h3>About me</h3>
-                  <p>I am a computer science and mathematics double major at the Universtiy of Massachusetts Amherst.</p>
-                </div>
-              </div>
+          <div class="container" style="background-color:#c2c2d6;">   
+            <div class="well">
+              <h3>About me</h3>
+              <p>I am a computer science and mathematics double major at the Universtiy of Massachusetts Amherst.</p>
+            </div>
           </div>
               
         </body>
