--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
               <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
             </div>  
-          <div class="container" style="background-color:#c2c2d6;">   
+          <div class="container" >   
             <div class="well">
               <h3>About me</h3>
               <p>I am a computer science and mathematics double major at the Universtiy of Massachusetts Amherst.</p>
