--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
     
               <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
             </div>  
-          <div class="container" >   
+             <div class="container"> 
+               <div class="btn-group">
+                    <button type="button" class="btn btn-primary">Projects</button>
+                    <button type="button" class="btn btn-primary">Interests</button>
+                    <button type="button" class="btn btn-primary">Current Work</button>
+                  </div>
+             </div>
+          <div class="container">   
             <div class="well">
               <h2>About me</h2>
               <center>  
