--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
                 <!--<div style="float: right;">-->
+                <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
-    
+                </a>
               <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
             </div>  
              <div class="container"> 
@@ -74,7 +75,7 @@
                 a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
-                  here</a>.</p>
+                  here</a>. Feel free to click on the image in the top right corner to check out my linked page</p>
             </div>
             <div class="well">
               <h2>FIRST Robotics</h2>
