--- a/Projects.html
+++ b/Projects.html
@@ -1,16 +1,51 @@
-<html>
-  <link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div class = "header">
-        <div class = "logo">
-          <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
-        </div>  
-        <div class = "tabContent">
-          <ul id="tabs">
-            <li><a href="Projects.html">Projects</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class = "body">
-         <p>Hello My name is Matthew Lydigsen and this website is one i designed and made from scratch.</p>
-      </div>
+<html lang="en">
+    <title>Something Clever</title>
+
+    <!--      <h1 class = "sections">Interest</h1>
+          <hr>
+          <p class = "body"> If you haven't figure out by now i'm kind of a nerd. I love watching TV some of my favorite
+          shows are Star Trek, Walking Dead, Game of Thrones, Doctor Who, just to name a few. I have seen almost every
+          science fiction movie made in the last 30 years. Other than TV and movies i love playing video games.
+          I play games such as Halo, League of Legends, Star Craft, and Fallout just to name a few. If anyone wants to
+          play some league with me feel free to message me my account name is Halo TrumpetGod. Some of my other interests
+          including building models, playing soccer, and listening to music mostly rap but some pop and rock as well.</p>
+    -->
+        <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+          <title>Bootstrap 101 Template</title>
+
+          <!-- Bootstrap -->
+          <link href="css/bootstrap.min.css" rel="stylesheet">
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+
+        </head>
+        <body>
+            <div class="jumbotron" style="background-color:#99bbff;">
+              <h1 style="padding-left:30px;">Projects</h1>
+            </div>  
+             <div class="container"> 
+               <div class="btn-group btn-group-lg">
+                    <a href="index.html" class="btn btn-primary" role="button">Home</a>
+                    <a href="Projects.html" class="btn btn-primary" role="button">Interests</a>
+                    <a href="Projects.html" class="btn btn-primary" role="button">Current Work</a>
+                  </div>
+             </div>
+          <div class="container">   
+            <div class="well">
+              <h2>About me</h2>
+               <p></p>
+            </div>
+            <div class="well">
+              <h2>FIRST Robotics</h2>
+               <p></p>
+            </div>
+          </div>
+              
+        </body>
 </html>
