--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
                     <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
                     <a href="Projects.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Projects.html" class="btn btn-primary" role="button">Current Work</a>
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      Programming Knowledge <span class="caret"></span></button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="java.html">Java</a></li>
+                        <li><a href="C.html">C++/C</a></li>
+                        <li><a href="Python.html">Python</a></li>
+                        <li><a href="javascript.html">Javascript</a></li>
+                      </ul>
                   </div>
              </div>
           <div class="container">   
