--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
           <div class="container">   
             <div class="well">
               <h2><b>About me</b></h2>
-              <center>  
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
-                frameborder="0" allowfullscreen ></iframe>
-              </center>
-              <br>
               <p>I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                  Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
@@ -62,15 +57,8 @@
                   here</a>. Feel free to click on the image in the top right corner to check out my linkedin page</p>
             </div>
             <div class="well">
-              <h2><b>FIRST Robotics</b></h2>
-               <p>This video above is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
-                one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
-                heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
-                 pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
-                shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
-                challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
-                 systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
-                  visit their website <a href="http://www.usfirst.org/">here</a></p>
+              <h2><b>About this site</b></h2>
+               <p></p>
             </div>
           </div>
               
