--- a/Interests.html
+++ b/Interests.html
@@ -1,1 +1,62 @@
 
+<html lang="en">
+    <title>Something Clever</title>
+        <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+
+          <!-- Bootstrap -->
+          <link href="css/bootstrap.min.css" rel="stylesheet">
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+
+        </head>
+        <body>
+            <div class="jumbotron" style="background-color:#99bbff;">
+              <h1 style="padding-left:30px;">Projects</h1>
+            </div>  
+             <div class="container"> 
+               <div class="btn-group btn-group-lg">
+                    <a href="index.html" class="btn btn-primary" role="button">Home</a>
+                    <div class="btn-group btn-group-lg">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      Programming Knowledge <span class="caret"></span></button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="java.html">Java</a></li>
+                        <li><a href="C.html">C++/C</a></li>
+                        <li><a href="Python.html">Python</a></li>
+                        <li><a href="javascript.html">Javascript</a></li>
+                      </ul>
+                     </div> 
+                    <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
+                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
+                  </div>
+             </div>
+          <div class="container">   
+            <div class="well">
+              <h2>FIRST Robotics</h2>
+              <center>  
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                frameborder="0" allowfullscreen ></iframe>
+              </center>
+              <br>
+               <p>This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
+                one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
+                heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
+                 pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
+                shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
+                challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
+                 systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
+                  visit their website <a href="http://www.usfirst.org/">here</a></p>
+            </div>
+            <div class="well">
+              <h2>Music</h2>
+               <p></p>
+            </div>
+          </div>
+              
+        </body>
+</html>
