--- a/Projects.html
+++ b/Projects.html
@@ -36,11 +36,11 @@
              </div>
           <div class="container">   
             <div class="well">
-              <h2>About me</h2>
+              <h2><b>About me</b></h2>
                <p></p>
             </div>
             <div class="well">
-              <h2>FIRST Robotics</h2>
+              <h2><b>FIRST Robotics</b></h2>
                <p></p>
             </div>
           </div>
