--- a/Interests.html
+++ b/Interests.html
@@ -37,7 +37,7 @@
              </div>
           <div class="container">   
             <div class="well">
-              <h2>FIRST Robotics</h2>
+              <h2><b>FIRST Robotics</b></h2>
               <center>  
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                 frameborder="0" allowfullscreen ></iframe>
@@ -53,7 +53,7 @@
                   visit their website <a href="http://www.usfirst.org/">here</a></p>
             </div>
             <div class="well">
-              <h2>Music</h2>
+              <h2><b>Music</b></h2>
                <p></p>
             </div>
           </div>
