--- a/Projects.html
+++ b/Projects.html
@@ -30,8 +30,8 @@
                         <li><a href="javascript.html">Javascript</a></li>
                       </ul>
                      </div> 
-                    <a href="Projects.html" class="btn btn-primary" role="button">Interests</a>
-                    <a href="Projects.html" class="btn btn-primary" role="button">Current Work</a>
+                    <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
+                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
              </div>
           <div class="container">   
