--- a/Interests.html
+++ b/Interests.html
@@ -54,7 +54,11 @@
             </div>
             <div class="well">
               <h2><b>Music</b></h2>
-               <p></p>
+               <p> I have been playing the trumpet for over a decade and have been involved in many musical groups. I went to Clinton High
+               School and was part of the Clinton High School band for four years. During that time I also took trumpet lessons
+               with Mark Bacon in order to expand my musical education. My senior year of high school I earned a chair in the
+               Central Districts Music Festival. It took me all four years of my high school career to be selected for that
+               festival and although I made it by the skin of my teeth in last chair I was still proud to have made it at all.</p>
             </div>
           </div>
               
