--- a/Interests.html
+++ b/Interests.html
@@ -59,6 +59,12 @@
                with Mark Bacon in order to expand my musical education. My senior year of high school I earned a chair in the
                Central Districts Music Festival. It took me all four years of my high school career to be selected for that
                festival and although I made it by the skin of my teeth in last chair I was still proud to have made it at all.</p>
+               <br>
+               <p>In college I joined the University of Massachusetts Minuteman Marching Band (UMMB). It is a lot of work. We
+               have practice monday-friday from 440-610 during the fall semester and most of our weekends are gone. We start when
+               the temperature is at its highest and end the year when the temperature is at its lowest. But I still love
+               the band and I have had some amazing perormances which include performing at Gillette Stadium, Penn State, Allentown,
+               and my freshman year the Macy's Thanksgiving Day parade.</p>
             </div>
           </div>
               
