--- a/Interests.html
+++ b/Interests.html
@@ -64,7 +64,12 @@
                have practice monday-friday from 440-610 during the fall semester and most of our weekends are gone. We start when
                the temperature is at its highest and end the year when the temperature is at its lowest. But I still love
                the band and I have had some amazing perormances which include performing at Gillette Stadium, Penn State, Allentown,
-               and my freshman year the Macy's Thanksgiving Day parade.</p>
+               and my freshman year the Macy's Thanksgiving Day parade. Aside from the band I am also part of the Hoop Band
+               at Umass. We are a pep band that plays at Basketball games and recently at the Hockey Games.</p>
+               <br>
+               <p>Aside from playing music I enjoy listening to all sorts of types of music from rap, rock, pop, rnb, and dubstep.
+               To be honest the only type of music I don't listen to is country (sorry to everyone who loves country I just
+               don't enjoy it). </p>
             </div>
           </div>
               
