--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="container">   
             <div class="well">
               <h2><b>About me</b></h2>
-              <p>I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
+              <p style="line-height: 1.8;">I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                  Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
@@ -58,7 +58,7 @@
             </div>
             <div class="well">
               <h2><b>About this site</b></h2>
-               <p>I created this site using git hub pages and bootstrap. I have done multiple projects involving web programming
+               <p style="line-height: 1.8;">I created this site using git hub pages and bootstrap. I have done multiple projects involving web programming
                but it has been primarily work with javascript and database languages including postgresql and mongodb. This
                site allows me to gain experience in the frontend side of web development. This website also allows me to show
                in great depth my experience with multiple programming languages which can be seen in the programming knowledge tab.
@@ -66,7 +66,7 @@
             </div>
             <div class="well">
               <h2><b>Contact me</b></h2>
-               <p>If there are any questions about myself or if someone is using this site to learn more about software development.
+               <p style="line-height: 1.8;">If there are any questions about myself or if someone is using this site to learn more about software development.
                Feel free to send me an email at mlydigsen@umass.edu.
                </p>
             </div>
