--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                </p>
             </div>
           </div>
-              
+          <center>
+            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
+                <img src="images/githubicon.png" style="width:25px;height:25px;">
+            </a>
+          </center>    
         </body>
 </html>
