--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
           </div>
           <center>
             <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
-                <img src="images/githubicon.png" style="width:25px;height:25px;">
+                <img src="images/githubicon.png" style="width:45px;height:45px;">
+            </a>
+            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
+                <img src="images/githubicon.png" style="width:45px;height:45px;">
+            </a>
+            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
+                <img src="images/githubicon.png" style="width:45px;height:45px;">
             </a>
           </center>    
         </body>
