--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             </div>
           </div>
           <center>
-            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
+            <a href="https://github.com/mattncc1701">
                 <img src="images/githubicon.png" style="width:45px;height:45px;">
             </a>
             <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
-                <img src="images/githubicon.png" style="width:45px;height:45px;">
+                <img src="images/linkedinlogo.png" style="width:45px;height:45px;">
             </a>
-            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
-                <img src="images/githubicon.png" style="width:45px;height:45px;">
+            <a href="https://www.imgur.com">
+                <img src="images/imgurlogo.png" style="width:45px;height:45px;">
             </a>
           </center>    
         </body>
