--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
-                <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
+                <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
               <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
